Margin spacing on the footer closer to correct

--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body { width: 100%;}
 }
 
 header{
-	background-color: #5f9ea0;
+	background-color: #38acec;
 	margin: 10px;
 	padding: 1px;
 }
@@ -60,19 +60,19 @@ header{
 .pull-right{
 	border: 5px solid #d3d3d3;
 	float: right;
-	margin: 10px;
+	margin: 5px;
 }
 
 .clear{
-	background-color: #5f9ea0;
+	background-color: #38acec;
 	padding: 20px 20px 10px 20px;
 }
 
 footer{
 	background-color: #000000;
 	font-style: italic;
-	color: #a9a9a9;
+	color: #2c3539;
 	font-size: 0.75em;
-	margin: 10px;
+	margin: 30px 10px 10px 10px;
 	padding: 20px;
 }
